--- a/.gitconfig
+++ b/.gitconfig
@@ -4,10 +4,10 @@
   branch = auto
 
 [user]
-  name = Jonathan So
+	name = Jonathan So
   email = jso.life@gmail.com
 
 [core]
 	excludesfile = ~/.gitignore_global
 [push]
-	default = simple
+  default = current
