--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/bundle/sass-syntax"]
 	path = .vim/bundle/sass-syntax
 	url = git://github.com/tpope/vim-haml.git
+[submodule "/Users/jso/dotfiles/.vim/bundle/vim-coffee-script"]
+	path = /Users/jso/dotfiles/.vim/bundle/vim-coffee-script
+	url = git://github.com/kchmck/vim-coffee-script.git
