--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,29 @@
 # status bar
 set-option -g status-utf8 on
 set -g status-bg blue
+# set-option -g status-justify centre
+set-option -g status-justify left
+set-option -g status-bg black
+set-option -g status-fg white
+set-option -g status-left-length 40
+set-option -g status-right-length 80
+set-option -g history-limit 50000
+setw -g window-status-bg black
+setw -g window-status-current-fg green
+setw -g window-status-bell-attr default
+setw -g window-status-bell-fg red
+# setw -g window-status-content-attr default
+# setw -g window-status-content-fg yellow
+setw -g window-status-activity-attr default
+setw -g window-status-activity-fg yellow
+
+set -g status-left '#[fg=red]#H#[fg=green]:#[fg=white]#S #[fg=green]][#[default]'
+
+# set -g status-right '#[fg=green]][#[fg=white] #T #[fg=green]][ #[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]'
+
+set -g status-interval 5
+set -g status-right '#[fg=green]][#[fg=white] #(tmux-mem-cpu-load 5 4) #[fg=green]][ #[fg=yellow]%H:%M#[default]'
+
 
 # Control-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
@@ -13,15 +36,28 @@ set -g base-index 1
 set -s escape-time 0
 
 # Constrain window size to maximum size of any client connected to specic window vs entire session
-setw -g aggressive-resize on
+# setw -g aggressive-resize off
+
+# Change copy / paste bindings to work like Vim
+# Note this used to use `copy-selection` but that has been replaced
+# with `copy-pipe` as of Tmux 1.8. See: https://goo.gl/ea3CRO
+bind Escape copy-mode
+bind p paste-buffer
+
+setw -g mode-keys vi
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # Vi copypaste mode
-set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-
-# Copy and Paste OSX
-set-option -g default-command "reattach-to-user-namespace -l bash"
+# set-window-option -g mode-keys vi
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
 
 # hjkl pane traversal
 bind h select-pane -L
@@ -48,6 +84,10 @@ set -g pane-border-bg black
 set -g pane-active-border-fg blue
 set -g pane-border-fg white
 
-bind-key y run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# set shell
+set -g default-shell /bin/zsh
 
-source '/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+# New window with default path set to last path
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
