--- a/tmux.conf
+++ b/tmux.conf
@@ -1,17 +1,43 @@
+# improve colors
+set -g default-terminal 'screen-256color'
+
+# Smart pane switching with awareness of vim splits
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# Control-b is not acceptable -- Vim uses it
+set-option -g prefix C-a
+bind-key C-a last-window
+
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
+# renumber windows sequentially after closing any of them
+set -g renumber-windows on
+
+# remove administrative debris (session name, hostname, time) in status bar
+set -g status-left ''
+set -g status-right ''
+
 # status bar
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 # set -g status-bg blue
 # set-option -g status-justify centre
-set-option -g status-justify left
+#set-option -g status-justify left
 # set-option -g status-bg colour55
 # set-option -g status-fg white
-set-option -g status-left-length 40
-set-option -g status-right-length 80
+#set-option -g status-left-length 40
+#set-option -g status-right-length 80
 set-option -g history-limit 50000
 #setw -g window-status-bg black
 #setw -g window-status-current-fg green
-setw -g window-status-bell-attr default
-setw -g window-status-bell-fg red
+#setw -g window-status-bell-attr default
+#setw -g window-status-bell-fg red
 # setw -g window-status-content-attr default
 # setw -g window-status-content-fg yellow
 # setw -g window-status-activity-attr default
@@ -66,12 +92,6 @@ bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux past
 # bind-key -t vi-copy 'v' begin-selection
 # bind-key -t vi-copy 'y' copy-selection
 
-# hjkl pane traversal
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
 
@@ -79,11 +99,16 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
 set-window-option -g automatic-rename
 
 # mouse detection
-set -g mouse-utf8 on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-option -g mouse-resize-pane on
-set-window-option -g mode-mouse on
+#set -g mouse-utf8 on
+set-option -g mouse on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-select-window on
+#set-option -g mouse-resize-pane on
+
+# set-window-option -g mode-mouse on
+
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # pane colors
 set -g pane-active-border-bg black
@@ -100,3 +125,6 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 run '~/.tmux/plugins/tpm/tpm'
+
+# Local config
+if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
