Add fish and modify tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -117,7 +117,7 @@ set -g pane-active-border-fg blue
 set -g pane-border-fg white
 
 # set shell
-set -g default-shell /bin/zsh
+set -g default-shell /usr/local/bin/fish
 
 # New window with default path set to last path
 bind '"' split-window -c "#{pane_current_path}"
@@ -125,6 +125,9 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 run '~/.tmux/plugins/tpm/tpm'
+
+# Load Powerline
+source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
