--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
 # improve colors
 set -g default-terminal 'screen-256color'
 
+run-shell "powerline-daemon -q"
+
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
