--- a/tmux.conf
+++ b/tmux.conf
@@ -71,26 +71,18 @@ set -s escape-time 0
 # Constrain window size to maximum size of any client connected to specic window vs entire session
 setw -g aggressive-resize off
 
-# Change copy / paste bindings to work like Vim
-# Note this used to use `copy-selection` but that has been replaced
-# with `copy-pipe` as of Tmux 1.8. See: https://goo.gl/ea3CRO
-bind Escape copy-mode
-bind p paste-buffer
+# Mouse support ------------------------------------------------
+set -g mouse on
 
+bind-key -T copy-mode-vi WheelUpPane send -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send -X scroll-down
+
+# # Vi copypaste
 setw -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" \; display-message "highlighted selection copied to system clipboard"
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
-# Vi copypaste mode
-# set-window-option -g mode-keys vi
-# bind-key -t vi-copy 'v' begin-selection
-# bind-key -t vi-copy 'y' copy-selection
+# End Mouse support --------------------------------------------
 
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
