Set aggressive resize to on for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -70,8 +70,8 @@ set -g base-index 1
 # Allow for faster key repetition
 set -s escape-time 0
 
-# Constrain window size to maximum size of any client connected to specic window vs entire session
-setw -g aggressive-resize off
+# Resize the damn window
+setw -g aggressive-resize on
 
 # Mouse support ------------------------------------------------
 set -g mouse on
