Set powerline conf to load from pyenv

--- a/tmux.conf
+++ b/tmux.conf
@@ -118,7 +118,7 @@ bind c new-window -c "#{pane_current_path}"
 run '~/.tmux/plugins/tpm/tpm'
 
 # Load Powerline
-source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+source "$HOME/.pyenv/versions/3.7.1/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
