--- a/tmux.conf
+++ b/tmux.conf
@@ -32,6 +32,10 @@ set -g renumber-windows on
 # Mouse support
 set -g mouse on
 
+# make scrolling with wheels work
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys
+
 # ==========================
 # ===   Key bindings     ===
 # ==========================
